# service/api/doLogin.go
@@ -70,7 +70,7 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 		// the request body was not a parseable JSON or is missing, rejecting the request
 		w.WriteHeader(http.StatusBadRequest) //400
 		ctx.Logger.WithError(err).Error("doLogin: the request body was not a parseable JSON or is missing")
-		fmt.Fprint(w, "\ndoLogin: the request body was not a parseable JSON or is missing\n")
+		//fmt.Fprint(w, "\ndoLogin: the request body was not a parseable JSON or is missing\n")
 		return
 	}
 	// validating username (removing white spaces and new lines)
@@ -80,7 +80,7 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 	if !isValid(userName) {
 		// the username is not valid, rejecting request
 		w.WriteHeader(http.StatusBadRequest) //400
-		fmt.Fprint(w, "\ndoLogin: the username is not valid\n\n")
+		//fmt.Fprint(w, "\ndoLogin: the username is not valid\n\n")
 		return
 	}
 	// 3.
@@ -94,8 +94,6 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError) //500
 		ctx.Logger.WithError(err).Error("doLogin: user creation or ID retrieval is unsuccessful")
-		fmt.Fprint(w, "\ndoLogin: user creation or ID retrieval is unsuccessful\n")
-		fmt.Fprint(w, "\ndoLogin: user creation or ID retrieval is unsuccessful\n\n")
 		return
 	}
 	// send it back
@@ -116,13 +114,7 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, ps httprouter
 		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError) // 500
 			ctx.Logger.WithError(err).Error("doLogin: unable to write response")
-
-			return
 		}
 		return
 	}
-
-	w.WriteHeader(http.StatusOK) //200
-	fmt.Fprint(w, "\nUser log-in action successful.\nThe user ID is returned in the content.\n\n")
-
 }
