# service/api/fetch-profile(?).go
@@ -8,12 +8,10 @@ import (
 )
 
 func (rt *_router) getProfile(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
-	// also get the followings????
 	w.Header().Set("Content-Type", "application/json")
 	var postIds []int64
 	// take username parameters from query
 	username := r.URL.Query().Get("userName")
-	w.Write([]byte("username = " + username + "\n"))
 
 	if username == "" {
 		// could not parse the id, throw bad request
@@ -24,20 +22,19 @@ func (rt *_router) getProfile(w http.ResponseWriter, r *http.Request, ps httprou
 	targetId, err := rt.db.SearchByUsername(username)
 	if err != nil {
 		// could not get id, throw internal server error
-		if err.Error() == "user not found" {
+		if err.Error() == "not found" {
 			w.WriteHeader(http.StatusNotFound) // 404
 			err = json.NewEncoder(w).Encode("user not found " + username)
 			if err != nil {
-				http.Error(w, err.Error(), http.StatusInternalServerError)
-				return
+				w.WriteHeader(http.StatusInternalServerError) // 500
 			}
 			return
-		}
-		w.WriteHeader(http.StatusInternalServerError) // 500
-		err = json.NewEncoder(w).Encode("couldnt search by useranem" + username)
-		if err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
-			return
+		} else {
+			w.WriteHeader(http.StatusInternalServerError) // 500
+			err = json.NewEncoder(w).Encode("couldnt search by useranem" + username)
+			if err != nil {
+				w.WriteHeader(http.StatusInternalServerError) // 500
+			}
 		}
 		return
 	}
@@ -56,44 +53,64 @@ func (rt *_router) getProfile(w http.ResponseWriter, r *http.Request, ps httprou
 		if err != nil {
 			// could not get follows, throw internal server error
 			w.WriteHeader(http.StatusInternalServerError) //500
-			w.Write([]byte("couldnt search follows"))
-
+			err = json.NewEncoder(w).Encode("couldnt search follows")
+			if err != nil {
+				w.WriteHeader(http.StatusInternalServerError) // 500
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+			}
 			return
 		}
 	} else {
 		// you are not following this person, throw forbidden
 		w.WriteHeader(http.StatusForbidden) //403
+		err = json.NewEncoder(w).Encode("you are not following this person")
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError) // 500
+		}
 		return
-
 	}
 	var selname, sub string
 	selname, sub, err = rt.db.SearchById(targetId)
 	if err != nil {
 		// could not get likes, throw internal server error
 		w.WriteHeader(http.StatusInternalServerError) //500
-		w.Write([]byte("couldnt search by id"))
+		err = json.NewEncoder(w).Encode("couldnt search by id, " + err.Error())
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError) // 500
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
 		return
 	}
 	postIds, err = rt.db.GetProfile(targetId)
 	if err != nil {
 		// could not get likes, throw internal server error
 		w.WriteHeader(http.StatusInternalServerError) //500
-		w.Write([]byte("couldnt search profile"))
+		err = json.NewEncoder(w).Encode("couldnt search profile")
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError) // 500
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
 
 		return
 	}
-	follows, present, err := rt.db.GetFollowing(targetId, -1)
+	follows, _, err := rt.db.GetFollowing(targetId, -1)
 	if err != nil {
 		// could not get follows, throw internal server error
 		w.WriteHeader(http.StatusInternalServerError) //500
-		w.Write([]byte("couldnt search following"))
-
-		return
+		err = json.NewEncoder(w).Encode("couldnt search following")
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError) // 500		}
+			return
+		}
 	}
 	user := user{targetId, selname, sub, postIds, follows, followed}
 
 	// return the list of post ids of that user
 	w.WriteHeader(http.StatusOK) //200
-	json.NewEncoder(w).Encode(user)
+	err = json.NewEncoder(w).Encode(user)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError) // 500
+		return
+	}
 
 }
